# dotconfig

./: .bash_aliases  .gitignore  README.md  install.sh  installer.sh  layout.txt  stow_config.sh  swap_monitors.sh
.config/: .aliases
.config/nvim/lua/: keymaps.lua  lsp-setup.lua
.config/regolith3/: Xresources
.config/tmux/: tmux.conf
config/: audio.sh  bash_aliases
config/btop/: btop.conf
config/claude/: CLAUDE.md
config/i3/: config
config/i3status/: config
config/i3status-rust/: config.toml
config/nvim/: init.lua  lazy-lock.json  lazyvim.json
config/nvim/lua/: cmp-setup.lua  keymaps.lua  lazy-plugins.lua  lsp-setup.lua  options.lua  telescope-setup.lua  treesitter-setup.lua
config/regolith3/: Xresources
config/regolith3/i3/: config
config/tmux/: tmux.conf
nixos/: autorandr.nix  code-cursor.nix  configuration.nix  docker.nix  flake.nix  hardware-configuration.nix  libreoffice.nix  main-user.nix  steam.nix  virtual-box.nix
nixos/examples/dotnet/: .gitignore  flake.nix
nixos/examples/nixcpp/: .gitignore  CMakeLists.txt  a.out  default.nix  flake.nix  main.cpp
nixos/examples/nixcpp/src/: CMakeLists.txt  importtest.cpp  importtest.h  main.cpp  newfile.cpp  newfile.h  simple.cc  simple.h  what_time.cc
nixos/examples/nixgo/: flake.nix  go.mod  main.go
nixos/examples/nixgo2/: database.db  flake.nix  go.mod
nixos/examples/nixnode/: flake.nix
nixos/examples/nixospython/: README.md  flake.nix  shell.nix  test.py
nixos/home-manager/: btop.nix  claude.nix  flake.nix  home.nix  hyprland.nix  i3.nix  main-user.nix  neovim.nix  synology.nix  tmux.nix
nixos/home-manager/i3/: i3.nix  i3config  i3statusconfig
nixos/hosts/default/: configuration.nix  hardware-configuration.nix  home.nix
nixos/hosts/desktop/: configuration.nix  hardware-configuration.nix  nvidia.nix
nixos/hosts/laptop/: configuration.nix  hardware-configuration.nix
nixos/modules/: README.md  audio.nix  autorandr.nix  cursor.nix  default.nix  docker.nix  embedded.nix  features.nix  gaming-packages.nix  godot.nix  libreoffice.nix  llama.nix  locale.nix  main-user.nix  networking.nix  obs.nix  opencode.nix  packages.nix  printing.nix  programs.nix  prusa-slicer.nix  services.nix  ssh.nix  steam.nix  unityhub.nix  virtualbox.nix
nvim/: lazy-lock.json  lazyvim.json
nvim/lua/: cmp-setup.lua  keymaps.lua  lazy-plugins.lua  lsp-setup.lua  options.lua
tmux/: tmux.conf
(+39 files in other folders)
